aligning filters correctly

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -334,7 +334,7 @@ ul#main-menu li {
 }
 
 #jobs_filter{
-  width: 486px;
+  width: 650px;
   margin: 0 auto;
   h3{
     float:left;
